@@ -18,18 +18,13 @@ package com.thoughtworks.gocd.authorization.ldap.utils;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.StringReader;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Properties;
+import java.util.*;
 
 import static java.text.MessageFormat.format;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
@@ -38,16 +33,12 @@ public class Util {
     public static final Gson GSON = new GsonBuilder().excludeFieldsWithoutExposeAnnotation().create();
 
     public static String readResource(String resourceFile) {
-        try (InputStreamReader reader = new InputStreamReader(Util.class.getResourceAsStream(resourceFile), StandardCharsets.UTF_8)) {
-            return IOUtils.toString(reader);
-        } catch (IOException e) {
-            throw new RuntimeException("Could not find resource " + resourceFile, e);
-        }
+        return new String(readResourceBytes(resourceFile), StandardCharsets.UTF_8);
     }
 
     public static byte[] readResourceBytes(String resourceFile) {
-        try (InputStream in = Util.class.getResourceAsStream(resourceFile)) {
-            return IOUtils.toByteArray(in);
+        try (InputStream is =  Objects.requireNonNull(Util.class.getResourceAsStream(resourceFile))) {
+            return is.readAllBytes();
         } catch (IOException e) {
             throw new RuntimeException("Could not find resource " + resourceFile, e);
         }
